# yuuki_chat

./: .env  .env.example  .gitignore  README.md  __init__.py  bot.py  chat.py  commands_accounting.py  commands_admin.py  commands_backup.py  commands_base.py  commands_bilibili.py  commands_birthday.py  commands_calc.py  commands_checkin.py  commands_diagnose.py  commands_dongle.py  commands_fun.py  commands_group_admin.py  commands_mqtt.py  commands_remind.py  commands_remote.py  commands_schedule.py  commands_search.py  commands_sticker.py  commands_translate.py  commands_update.py  commands_vault.py  commands_weather.py  commands_wordcloud.py  commands_wzry.py  config.py  deploy.bat  deploy.sh  maimai.py  migrate_data.py  onebot_client.py  pyproject.toml  requirements.txt  restart_flag.txt  (+4 more)
dashboard/: index.html  server.py
plugins/yuuki_chat/: .version  __init__.py  chat.py  commands_accounting.py  commands_admin.py  commands_backup.py  commands_base.py  commands_birthday.py  commands_calc.py  commands_checkin.py  commands_diagnose.py  commands_dongle.py  commands_fun.py  commands_group_admin.py  commands_remind.py  commands_schedule.py  commands_search.py  commands_sticker.py  commands_translate.py  commands_update.py  commands_vault.py  commands_weather.py  commands_wordcloud.py  config.py  face_detector_enhanced.py  face_detector_optimized.py  maimai.py  server.py  test_all.py  utils.py
yuuki_bot/: __init__.py  config.py  utils.py
yuuki_bot/commands/: __init__.py
yuuki_bot/core/: __init__.py
yuuki_data/: heartbeat.txt
