[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuuki-bot"
version = "1.0.0"
description = "Yuuki Noa QQ Bot"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "openai",
    "httpx",
    "pillow",
    "qreader"
]
